added a bunch of important stuff

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BHHxITECH MERCHANDISE</title>
 
     <link rel="stylesheet" href="./css/index.css">
     <script src="./static/js/index.js" defer></script>
+    <script src="./static/js/main.js"></script>
 </head>
 <body>
 
@@ -67,16 +68,10 @@
         </div>
 
         <div id="items">
-            <a href="#"><img src="./_static/landingpageimages/topseller.svg" alt="Top Seller"></a>
-            <a href="#"><img src="./_static/landingpageimages/fuerdich.svg" alt="Fuer dich"></a>
-            <a href="#"><img src="./_static/landingpageimages/neueware.svg" alt="Neue ware"></a>
+            <a href="#" id="top_seller_bttn"><img src="./_static/landingpageimages/topseller.svg" alt="Top Seller"></a>
+            <a href="#" id="fuer_dich_bttn"><img src="./_static/landingpageimages/fuerdich.svg" alt="Fuer dich"></a>
+            <a href="#" id="neue_ware_bttn"><img src="./_static/landingpageimages/neueware.svg" alt="Neue ware"></a>
         </div>
-        <div id="items">
-            <a href="#"><img src="./_static/landingpageimages/topseller.svg" alt="Top Seller"></a>
-            <a href="#"><img src="./_static/landingpageimages/fuerdich.svg" alt="Fuer dich"></a>
-            <a href="#"><img src="./_static/landingpageimages/neueware.svg" alt="Neue ware"></a>
-        </div>
-
         <br id="scroll-target">
 
 
