--- a/shop_tiles.html
+++ b/shop_tiles.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Top Sellers - BHHxITECH</title>
     <link rel="stylesheet" href="css/shop_tiles.css">
     <link rel="stylesheet" href="https://use.typekit.net/bsc2ugu.css">
 </head>
