--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/shopping_cart.css">
+    <script src="./static/js/shop_tiles.js"></script>
     <title>Cart - BHHxITECH</title>
 </head>
 <body>
