--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="https://use.typekit.net/bsc2ugu.css">
     <script src="./static/js/index.js" defer></script>
-    <script src="./static/js/main.js"></script>
+    <script src="./static/js/main.js" type="module"></script>
 </head>
 <body>
 
