--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/bsc2ugu.css">
     <script src="./static/js/index.js" defer></script>
     <script src="./static/js/main.js" type="module"></script>
+   
 </head>
 <body>
 
@@ -81,7 +82,7 @@
         <div id="items">
             <a href="#" id="top_seller_bttn"><img src="./_static/landingpageimages/topseller.svg" alt="Top Seller"></a>
             <a href="#" id="fuer_dich_bttn"><img src="./_static/landingpageimages/fuerdich.svg" alt="Fuer dich"></a>
-            <a href="#" id="neue_ware_bttn"><img src="./_static/landingpageimages/neueware.svg" alt="Neue ware"></a>
+            <a href="#" id="new_arrivals_bttn"><img src="./_static/landingpageimages/neueware.svg" alt="Neue ware"></a>
         </div>
         <br id="scroll-target">
 
