--- a/shop_tiles.html
+++ b/shop_tiles.html
@@ -7,6 +7,7 @@
     <title>Top Sellers - BHHxITECH</title>
     <link rel="stylesheet" href="css/shop_tiles.css">
     <link rel="stylesheet" href="https://use.typekit.net/bsc2ugu.css">
+    <?php ./php_scripts/handle_sql_requests.php ?>
 </head>
 <body>
 
