--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
                         <input class="nav-div__container__search" placeholder="Imperial Ice Hoodie">
                         <div class="nav-div__cart-and-profile">
-                            <img src="./_static/landingpageimages/profile.png" alt="Profile" class="nav-div__container__profile-icon">
+                            <a href="login.html"><img src="./_static/landingpageimages/profile.png" alt="Profile" class="nav-div__container__profile-icon"></a>
                            <a href="shopping_cart.html"> <img src="./_static/landingpageimages/cart.png" alt="Profile" class="nav-div__container__cart-icon" > </a>
                         </div>
                     </div>
