--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -22,7 +22,7 @@
 
                     <input class="nav-div__container__search" placeholder="Imperial Ice Hoodie">
                     <div class="nav-div__cart-and-profile">
-                        <img src="./_static/landingpageimages/profile.png" alt="Profile" class="nav-div__container__profile-icon">
+                        <a href="login.html"> </a><img src="./_static/landingpageimages/profile.png" alt="Profile" class="nav-div__container__profile-icon"></a>
                         <img src="./_static/landingpageimages/cart.png" alt="Profile" class="nav-div__container__cart-icon">
                     </div>
                 </div>
